# botesee

./: .gitignore  .pre-commit-config.yaml  .python-version  DiscordBot.py  Dockerfile  ImageCollectorCompare.py  ImageCollectorMatchFinished.py  ImageCollectorStatLast.py  Pipfile  Procfile  ProjectExceptions.py  README.md  a_faceit_get_funcs.py  a_steam_funcs.py  alembic.ini  async_faceit_get_funcs.py  async_steam_funcs.py  database.py  demo_management.py  discord_funcs.py  docker-compose.yaml  elos.csv  env_variables.py  faceit_get_funcs.py  imageCollector.py  main.py  main_script.py  matches.csv  old.env  pillow-test.py  players.csv  pyproject.toml  requirements.txt  sample.env  stats.sqlite3  steam_funcs.py  test.py  test1.py  testdiscordembed.py  token.txt  (+3 more)
.github/workflows/: lint_and_tests.yml
ImageCollectors/: ImageCollectorCompare.py  ImageCollectorMatchFinished.py  ImageCollectorStatLast.py  enums.py
api_funcs/: async_faceit_get_funcs.py
application/clients/: faceit.py  rabbit.py  steam.py
application/db/: init.py
application/discord_bot/: client.py  main.py
application/image_collectors/: compare_imcol.py  last_stat_imcol.py  match_finished.py
application/image_collectors/models/: last_stat.py
application/managers/: image_manager.py
application/tests/: conftest.py
application/web/: dependencies.py  main.py
application/web/models/: events.py
bot/: __init__.py
bot/celery/: tasks.py
bot/clients/: faceit.py  rabbit.py  steam.py
bot/db/: __init__.py  init.py  models_sqlalchemy.py  models_sqlmodel.py  models_tortoise.py  script.py  transfer_script.py
bot/db/migrations/: env.py
bot/db/models/: base.py  elo.py  gambling.py  match.py  player.py
bot/db/repositories/: elo.py  gambling.py  match.py  player.py
bot/discord_bot/: Dockerfile  __init__.py  client.py  discord_factory.py  main.py
bot/discord_bot/models/: embed.py
bot/image_collectors/: __init__.py  _exceptions.py  compare_imcol.py  last_stat_imcol.py  match_finished.py
bot/image_collectors/models/: last_stat.py
bot/templates/: index.html
bot/tests/: conftest.py  test_compare.py  test_image_collectors.py
bot/tests/collectors/: test_match_finished_collector.py
bot/utils/: enums.py
bot/web/: dependencies.py  main.py  requirements.txt
bot/web/models/: base.py  events.py
clients/: faceit.py  steam.py
clients/models/faceit/: match_details.py  match_stats.py  player_details.py  player_history.py
clients/models/steam/: user_app_stats.py  user_recently_stats.py
db/: init.py  scripts.py  transfer_script.py
discord_bot/: client.py
discord_bot/models/: embed.py  faceit.py
image_collectors/: compare_imcol.py  last_stat_imcol.py  match_finished.py
image_collectors/models/: last_stat.py
src/: __init__.py
src/celery/: celeryconfig.py  tasks.py
src/celery_app/: tasks.py
src/clients/: faceit.py  rabbit.py  redis.py  redis_broker.py  redis_repo.py  steam.py
src/cronjobs/: tasks.py
src/db/: __init__.py  script.py
src/db/migrations/: env.py
src/db/models/: base.py  elo.py  gambling.py  match.py  player.py
src/db/repositories/: elo.py  gambling.py  match.py  player.py  statistics.py
src/discord_bot/: _exceptions.py  client.py  discord_factory.py  main.py  views.py
src/discord_bot/models/: embed.py
src/image_collectors/: __init__.py  avatar_designer.py  compare_imcol.py  last_stat_imcol.py  match_finished.py  weekly_stats.py
src/image_collectors/models/: last_stat.py
src/static/: swagger-ui-bundle.js
src/utils/: comparators.py  enums.py  shared_models.py
src/web/: dependencies.py  log_conf.py  main.py
src/worker/: tasks.py
templates/: index.html
tests/: conftest.py  match_stats.json  show_match_finished.py  test_compare.py  test_image_collectors.py
utils/: enums.py
web/: main.py
web/models/: base.py  entities.py  events.py
(+33 files in other folders)
