[tool.bumpversion]
current_version = "1.5.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["__init__.py", "versions"]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "F", "E"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pdm]
distribution = false

[project]
name = "botesee"
version = "1.4.0"
description = "Discord bot that handles FaceIT webhooks"
authors = [
    {name = "ubqm", email = "sharaevvlad@mail.ru"},
]
dependencies = [
    "fastapi==0.115.6",
    "aiohttp-client-cache[redis]==0.12.4",
    "aio-pika==9.5.4",
    "alembic==1.14.0",
    "celery==5.4.0",
    "discord-py==2.4.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "pillow==11.0.0",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
    "pydantic-settings==2.7.0",
    "uvicorn==0.34.0",
    "asyncpg==0.30.0",
    "pytz==2024.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
test = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
