[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["__init__.py", "versions"]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "F", "E"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[project]
name = "botesee"
version = "1.8.0"

description = "Discord bot that handles FaceIT webhooks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "ubqm", email = "sharaevvlad@mail.ru"},
]
dependencies = [
    "aio-pika>=9.5.7",
    "aiohttp-client-cache[redis]>=0.14.1",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "discord-py>=2.6.4",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
